# BLOOM-LORA

./: Dockerfile  bloomz_7b1_mt_generate.py  finetune.py  generate.py  generate_alpaca.py  generate_bloom.py  generate_config.json  pyproject.toml  requirements.txt  train_config.json
utils/: read.py  s3.py
