[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BLOOM LORA fine tunning"
description = "Fine tunning BLOOM using LORA (Low rank Adaptation of Large Language Models)"
version = "0.1.0"
authors = [
    { name = "Nikita Teslenko Grygoryev", email = "nikgrygoryev@gmail.com" },
]
dependencies = [
    "accelerate==0.19.0",
    "aiofiles==23.1.0",
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "altair==5.0.0",
    "anyio==3.6.2",
    "appdirs==1.4.4",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "bitsandbytes==0.38.1",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "cmake==3.26.3",
    "contourpy==1.0.7",
    "cycler==0.11.0",
    "datasets==2.12.0",
    "dill==0.3.6",
    "docker-pycreds==0.4.0",
    "fastapi==0.95.1",
    "ffmpy==0.3.0",
    "filelock==3.12.0",
    "fonttools==4.39.4",
    "frozenlist==1.3.3",
    "fsspec==2023.5.0",
    "gitdb==4.0.10",
    "GitPython==3.1.31",
    "gradio==3.28.3",
    "gradio_client==0.2.3",
    "h11==0.14.0",
    "httpcore==0.17.0",
    "httpx==0.24.0",
    "huggingface-hub==0.14.1",
    "idna==3.4",
    "jieba==0.42.1",
    "Jinja2==3.1.2",
    "jsonschema==4.17.3",
    "kiwisolver==1.4.4",
    "linkify-it-py==2.0.2",
    "lit==16.0.3",
    "loralib==0.1.1",
    "lxml==4.9.2",
    "markdown-it-py==2.2.0",
    "MarkupSafe==2.1.2",
    "matplotlib==3.7.1",
    "mdit-py-plugins==0.3.3",
    "mdurl==0.1.2",
    "mecab-python3==1.0.6",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "multiprocess==0.70.14",
    "neologdn==0.5.1",
    "networkx==3.1",
    "numpy==1.24.3",
    "nvidia-cublas-cu11==11.10.3.66",
    "nvidia-cuda-cupti-cu11==11.7.101",
    "nvidia-cuda-nvrtc-cu11==11.7.99",
    "nvidia-cuda-runtime-cu11==11.7.99",
    "nvidia-cudnn-cu11==8.5.0.96",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.2.10.91",
    "nvidia-cusolver-cu11==11.4.0.1",
    "nvidia-cusparse-cu11==11.7.4.91",
    "nvidia-nccl-cu11==2.14.3",
    "nvidia-nvtx-cu11==11.7.91",
    "orjson==3.8.12",
    "packaging==23.1",
    "pandas==2.0.1",
    "pathtools==0.1.2",
    "peft @ git+https://github.com/huggingface/peft.git@4fd374e80d670781c0d82c96ce94d1215ff23306",
    "Pillow==9.5.0",
    "protobuf==4.23.0",
    "psutil==5.9.5",
    "pyarrow==12.0.0",
    "pycld2==0.41",
    "pydantic==1.10.7",
    "pydub==0.25.1",
    "Pygments==2.15.1",
    "pyparsing==3.0.9",
    "pyrsistent==0.19.3",
    "python-dateutil==2.8.2",
    "python-multipart==0.0.6",
    "pytz==2023.3",
    "PyYAML==6.0",
    "regex==2023.5.5",
    "requests==2.30.0",
    "responses==0.18.0",
    "semantic-version==2.10.0",
    "sentencepiece==0.1.99",
    "sentry-sdk==1.22.2",
    "setproctitle==1.3.2",
    "six==1.16.0",
    "smmap==5.0.0",
    "sniffio==1.3.0",
    "starlette==0.26.1",
    "sympy==1.12",
    "tokenizers==0.13.3",
    "toolz==0.12.0",
    "torch==2.0.1",
    "tqdm==4.65.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@5d02e6bd2079a3691c5ef7a1c888abe6a16d854b",
    "translate-toolkit==3.8.6",
    "triton==2.0.0",
    "typing_extensions==4.5.0",
    "tzdata==2023.3",
    "uc-micro-py==1.0.2",
    "urllib3==1.26.15",
    "uvicorn==0.22.0",
    "wcwidth==0.2.6",
    "webencodings==0.5.1",
    "websockets==11.0.3",
    "xxhash==3.2.0",
    "yarl==1.9.2",

]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = [
    "--import-mode=importlib",
]
